--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body></body>
+  <head>
+    <title>Ship Counter</title>
+  </head>
+  <body>
+    <h1>Ship Counter</h1>
+  </body>
 </html>
